--- a/css/global.css
+++ b/css/global.css
@@ -11,30 +11,72 @@ Pink: #D04397
 html {
 	width: 100%;
 	height: 100%;
+	padding: 0;
+	margin: 0;
+
 }
 
 body {
 	width: 100%;
 	height: 100%;
-	padding-top: 70px;
+	padding: 50px 0 0 0;
+	margin: 0;
+	/*background-color:#28292E;*/
+}
+
+.container{
+	width: 100%;
+}
+.footer{
+	width:100%;
+	background-color:#28292E;
+}
+
+.extend{
+
 }
 
 .logotopleft img {
-	margin:2px 0 0 2px;
+	margin:2px 0 0 8px;
 	position:absolute;
 	height:auto;
 	width:auto;
 	max-width:45px;
 	max-height:45px;
 }
-.bottom{
-	background-color:#28292E;
-}
+
 .navbar{
 	background-color:#28292E;
 }
+.navbar .navbar-nav {
+  display: inline-block;
+  float: none;
+  vertical-align: top;
+}
+.navbar .navbar-nav li a{
+	color:#FFFFFF;
+}
+.navbar .navbar-nav li a:link{
+	color:#FFFFFF;
+}
+.navbar .navbar-nav li a:visited{
+	color:#FFFFFF;
+}
+.navbar .navbar-nav li a:hover{
+	color:#2EC1DE;
+}
+.navbar .navbar-nav li a:active{
+	color:#3fe5ff;
+}
 
-/* not the best way of doing this... create our own class for container!! */
+.navbar .navbar-collapse {
+  text-align: center;
+}
+
+.nav-active{
+	background-color:#4f4f4f;
+}
+
 @media (min-width: 1200px) {
     .container-fluid{
         max-width: 970px;
@@ -42,34 +84,59 @@ body {
     .container{
         max-width: 970px;
         margin:auto;
-
     }
     .navbar-nav{
         margin:auto;
     }
 }
 
+.linky:visited{
+	text-decoration: none;
+	color: #6543d3;
+}
+.linky:hover{
+	text-decoration: none;
+	color: #3fe5ff;
+}
+.linky:link{
+	text-decoration: none;
+	color: #2EC1DE;
+}
+.linky:active{
+	text-decoration: none;
+	color: #13afc6;
+}
+
 
 .footer-lists ul{
 	float: left;
-	width: 14.28%;
+	width: 16.6%;
 	padding:5px;
 	list-style-type: none;
 }
 .footer-lists ul li{
 	/*text-decoration: none;*/
 }
-.footer-lists ul li{
-	text-decoration: none;
-	color: #B3B3B3;
-}
 .footer-lists ul li a{
 	text-decoration: none;
-	color: #B3B3B3;
+	color: #848484;
 }
 .footer-lists ul li a:hover{
+	color: #2EC1DE;
+}
+.footer-lists ul li:first-child a{
 	text-decoration: none;
 	color: #FFFFFF;
+}
+.footer-lists ul li:first-child a:hover{
+	color: #2EC1DE;
+}
+
+.footer-lists ul a img{
+	opacity:100%;
+}
+.footer-lists ul a img:hover{
+	opacity:30%;
 }
 
 
