--- a/css/index.css
+++ b/css/index.css
@@ -5,14 +5,14 @@
 
 .navbar-default .navbar-brand {
     font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive;
-    color: #fed136;
+    color: #2EC1DE;
 }
 
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus,
 .navbar-default .navbar-brand:active,
 .navbar-default .navbar-brand.active {
-    color: #fec503;
+    color: #2EC1DE;
 }
 
 .navbar-default .navbar-collapse {
@@ -20,17 +20,17 @@
 }
 
 .navbar-default .navbar-toggle {
-    border-color: #fed136;
-    background-color: #fed136;
+    border-color: #2EC1DE;
+    background-color: #2EC1DE;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
-    background-color: #fff;
+    background-color: #2EC1DE;
 }
 
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-    background-color: #fed136;
+    background-color: #2EC1DE;
 }
 
 .navbar-default .nav li a {
@@ -38,7 +38,7 @@
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 400;
     letter-spacing: 1px;
-    color: #fff;
+    color: #2EC1DE;
 }
 
 .navbar-default .nav li a:hover,
@@ -49,14 +49,14 @@
 
 .navbar-default .navbar-nav>.active>a {
     border-radius: 0;
-    color: #fff;
-    background-color: #fed136;
+    color: #2EC1DE;
+    background-color: #2EC1DE;
 }
 
 .navbar-default .navbar-nav>.active>a:hover,
 .navbar-default .navbar-nav>.active>a:focus {
     color: #fff;
-    background-color: #fec503;
+    background-color: #2EC1DE;
 }
 
 @media(min-width:768px) {
