--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,19 @@
-.navbar-default {
+/* Navigation bar CSS for the home page exclusively*/
+.brand-logo img {
+    margin:2px 0 0 8px;
+    position:absolute;
+    height:auto;
+    width:auto;
+    max-width:60px;
+    max-height:60px;
+}
+
+.navbar-fixed-top {
+    min-height: 65px;
+    position: absolute;
+}
+
+.navbar-default{
     border-color: transparent;
     background-color: #222;
 }
@@ -20,17 +35,19 @@
 }
 
 .navbar-default .navbar-toggle {
+    margin-top: 15px;
     border-color: #2EC1DE;
     background-color: #2EC1DE;
 }
 
 .navbar-default .navbar-toggle .icon-bar {
-    background-color: #2EC1DE;
+    background-color: white;
 }
 
 .navbar-default .navbar-toggle:hover,
 .navbar-default .navbar-toggle:focus {
-    background-color: #2EC1DE;
+    border-color: #fff;
+    background-color: #111;
 }
 
 .navbar-default .nav li a {
@@ -38,13 +55,13 @@
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 400;
     letter-spacing: 1px;
-    color: #2EC1DE;
+    color: #FFFFFF;
 }
 
 .navbar-default .nav li a:hover,
 .navbar-default .nav li a:focus {
     outline: 0;
-    color: #fed136;
+    color: #2EC1DE;
 }
 
 .navbar-default .navbar-nav>.active>a {
@@ -55,7 +72,7 @@
 
 .navbar-default .navbar-nav>.active>a:hover,
 .navbar-default .navbar-nav>.active>a:focus {
-    color: #fff;
+    color: #2EC1DE;
     background-color: #2EC1DE;
 }
 
@@ -67,6 +84,17 @@
         -webkit-transition: padding .3s;
         -moz-transition: padding .3s;
         transition: padding .3s;
+    }
+
+    .container{
+        max-width: 970px;
+        margin:auto;
+    }
+
+    .navbar-nav > li > a {
+        line-height: 20px;
+        padding-top: 20px;
+        padding-bottom: 20px;
     }
 
     .navbar-default .navbar-brand {
