--- a/css/global.css
+++ b/css/global.css
@@ -7,7 +7,7 @@ Orange: #E2AC2F
 Pink: #D04397
 */
 
-
+/*
 html {
 	width: 100%;
 	height: 100%;
@@ -21,8 +21,9 @@ body {
 	height: 100%;
 	padding: 50px 0 0 0;
 	margin: 0;
-	/*background-color:#28292E;*/
+	background-color:#28292E;
 }
+*/
 
 .container{
 	width: 100%;
@@ -36,14 +37,6 @@ body {
 
 }
 
-.logotopleft img {
-	margin:2px 0 0 8px;
-	position:absolute;
-	height:auto;
-	width:auto;
-	max-width:45px;
-	max-height:45px;
-}
 
 /* Navigation bar CSS for other pages.
 .navbar{
