--- a/css/about.css
+++ b/css/about.css
@@ -2,16 +2,26 @@
 /* ABOUT PAGE */
 
 .about_body {
-    margin: 10% auto 5%;
     text-align: center;
+    padding: 5% 0;
 }
 
 .about_body_text {
     width: 450px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
 }
-
+.vidbackground {
+    width: 100%; 
+    height: 100%; 
+    position: absolute; 
+    left: 0px; 
+    top: 0px; 
+    z-index: 0;
+}
+.stretch {
+    width:100%;
+    height:100%;
+}
 /* STATS BOX */
 
 .stats-container {
@@ -42,9 +52,7 @@
 }
 
 /* E-BOARD IMAGE GRID */
-
 .e-board {
-    margin-right: auto;
-    margin-left: auto;
+    margin: 0 auto;
 }
 
