--- a/css/global.css
+++ b/css/global.css
@@ -1,47 +1,34 @@
-/*
-Official GAI colors (as used in branding in the past):
-Blue: #2EC1DE
-Green: #A7CF53
-Purple: #874D9D
-Orange: #E2AC2F
-Pink: #D04397
-*/
-html {
-	width: 100%;
-	height: 100%;
-	padding: 0;
-	margin: 0;
-}
-body {
-	width: 100%;
-	height: 100%;
-	padding: 50px 0 0 0;
-	margin: 0;
-	background-color:#28292E;
-}
-
-.footer{
+html {width: 100%;height: 100%;padding: 0;margin: 0;}
+body {width: 100%;height: 100%;padding: 50px 0 0 0;margin: 0;
+	background-color:#28292E;}
+.body-container{
+	background-color:#FFFFFF;
 	width:100%;
-	background-color:#28292E;
-	box-shadow: 0px 500px 0px 500px #28292E;
-	padding-top:10px;
+	width:100%;
 }
-/* Navigation bar CSS for other pages.*/
+.blue {background-color: #2EC1DE;}
+.green {background-color: #A7CF53;}
+.purple {background-color: #874D9D;}
+.orange {background-color: #E2AC2F;}
+.pink {background-color: #D04397;}
+.black {background-color: #111;}
+.white {background-color: #fff;}
+.black-text {color: #111;}
+.blue-text {color: #2EC1DE;}
+.green-text {color: #A7CF53;}
+.purple-text {color: #874D9D;}
+.orange-text {color: #E2AC2F;}
+.pink-text {color: #D04397;}
+.white-text {color: #fff;}
+
 .navbar{
 	background-color:#28292E;
-	/*line-height: 20px;
-	height: 22px;
-	padding-top: 0;*/
 }
 .navbar-nav {
   display: inline-block;
   float: none;
   vertical-align: top;
-  /*line-height: 20px;
-  height: 22px;
-  padding-top: 0;*/
-}
-.navbar .navbar-nav li a{
+}.navbar-nav li a{
 	color:#FFFFFF;
 	-webkit-transition: 0.15s;
        -moz-transition: 0.15s;
@@ -49,12 +36,8 @@ body {
          -o-transition: 0.15s;
             transition: 0.15s;
 }
-.navbar .navbar-nav li a:link{
-	color:#FFFFFF;
-}
-.navbar .navbar-nav li a:visited{
-	color:#FFFFFF;
-}
+.navbar .navbar-nav li a:link{color:#FFFFFF;}
+.navbar .navbar-nav li a:visited{color:#FFFFFF;}
 .navbar .navbar-nav li a:hover{
 	color:#2EC1DE;
 	-webkit-transition: 0.05s;
@@ -64,41 +47,30 @@ body {
             transition: 0.05s;
 }
 .navbar .navbar-nav li a:active{color:#3fe5ff;}
-.navbar .navbar-collapse {text-align: center;}
+.navbar .navbar-collapse {text-align:center;}
 .nav-active{background-color:#4f4f4f;}
-.container{/*padding-top:50px;*/}
-@media (min-width: 1200px) {
+@media (min-width: 1000px) {
     .container-fluid{max-width: 970px;}
     .container{max-width: 970px;margin:auto;}
     .navbar-nav{margin:auto;}
 }
-.linky:visited{
-	text-decoration: none;
-	color: #6543d3;
+.linky:visited{text-decoration:none;color:#6543d3;}
+.linky:hover{text-decoration:none;color: #3fe5ff;}
+.linky:link{text-decoration:none;color:#2EC1DE;}
+.linky:active{text-decoration:none;color:#13afc6;}
+.footer{
+	width:100%;
+	background-color:#28292E;
+	box-shadow: 0px 500px 0px 500px #28292E;
+	padding-top:10px;
 }
-.linky:hover{
-	text-decoration: none;
-	color: #3fe5ff;
-}
-.linky:link{
-	text-decoration: none;
-	color: #2EC1DE;
-}
-.linky:active{
-	text-decoration: none;
-	color: #13afc6;
-}
-
-.footer-lists ul{
+.footer-lists{
 	float: left;
 	width: 20%;
 	padding:10px 5px 5px 5px;
 	list-style-type: none;
 }
-.footer-lists ul li{
-	/*text-decoration: none;*/
-}
-.footer-lists ul li a{
+.footer-lists li a{
 	text-decoration: none;
 	color: #848484;
     -webkit-transition: 0.15s;
@@ -107,34 +79,25 @@ body {
          -o-transition: 0.15s;
             transition: 0.15s;
 }
-.footer-lists ul li a:hover{
+.footer-lists li a:hover{
 	color: #2EC1DE;
 	-webkit-transition: 0.05s;
        -moz-transition: 0.05s;
         -ms-transition: 0.05s;
          -o-transition: 0.05s;
-            transition: 0.05s;
-	
+            transition: 0.05s;	
 }
-.footer-lists ul li:first-child{
+.footer-lists li:first-child{
 	text-decoration: none;
 	color: #FFFFFF;
 }
-.footer-lists ul li:first-child a{
+.footer-lists li:first-child a{
 	text-decoration: none;
 	color: #FFFFFF;
 }
-.footer-lists ul li:first-child a:hover{
-	color: #2EC1DE;
-}
-
-.footer-lists ul a img{
-	opacity:100%;
-}
-.footer-lists ul a img:hover{
-	opacity:30%;
-}
-
+.footer-lists li:first-child a:hover{color: #2EC1DE;}
+.footer-lists ul a img{opacity:100%;}
+.footer-lists ul a img:hover{opacity:30%;}
 .footer-corner{
 	width: 50%;
 	float:left;
@@ -148,18 +111,21 @@ body {
 	text-decoration: none;
 	color:#FFFFFF;
 }
-
-.subscribe-bar{
+.presub{
 	background-color:#C1C1C1;
+	width:100%;
+}
+.subscribe-bar{
+	width:400px;
 	line-height: 45px;
 	height:45px;
 	color:#000000;
+	margin: 0 auto;
 }
 .subscribe-bar div{
 	display: inline-block;
 	margin: 0 auto;
 }
-
 .gray-social-ul a img{
 	opacity:0.8;
 	margin-bottom:3px;
@@ -180,18 +146,40 @@ body {
 	filter: 		grayscale(0%);
 	filter: gray; /* IE 6-9 */
 }
-
-.blue {background-color: #2EC1DE;}
-.green {background-color: #A7CF53;}
-.purple {background-color: #874D9D;}
-.orange {background-color: #E2AC2F;}
-.pink {background-color: #D04397;}
-.black {background-color: #111;}
-.white {background-color: #fff;}
-.black-text {color: #111;}
-.blue-text {color: #2EC1DE;}
-.green-text {color: #A7CF53;}
-.purple-text {color: #874D9D;}
-.orange-text {color: #E2AC2F;}
-.pink-text {color: #D04397;}
-.white-text {color: #fff;}
+.mobile-social{
+	display:none;
+}
+@media (max-width: 600px) {
+	.subscribe-bar{
+		width:100%;
+	}
+	.subscribe-bar div{
+		width:100%;
+		padding: 0 2px;
+	}
+	.subscribe-bar div form label{
+		display:none;
+	}
+	.subscribe-bar div form div{
+		width:70%;
+	}
+	.subscribe-bar div form button{
+		width:28%;
+	}
+	.footer-lists{
+		width:50%;
+	}
+	.gray-social-ul{
+		display: none;
+	}
+	.mobile-social{
+		/*clear:both;*/
+		display:inline-block;
+		/*margin:0 auto;*/
+		width:100%;
+	}
+	.mobile-social img{
+		width: 14%;
+		background-color:#FFFFFF;
+	}
+}
