--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,5 @@
 
-/* ABOUT PAGE */
+/***** ABOUT PAGE *****/
 
 .about_body {
     text-align: center;
@@ -56,6 +56,18 @@
     margin: 0 auto;
 }
 
+/* HISTORY */
+
 .history-container {
     margin-bottom: 50px;
+}
+
+.history-container h2 {
+    margin-bottom: 30px;
+}
+
+.history-event {
+    width: 150px !important;
+    border: 2px solid #EEEEEE;
+    position: relative;
 }
