--- a/css/global.css
+++ b/css/global.css
@@ -50,7 +50,7 @@ body {width: 100%;height: 100%;padding: 50px 0 0 0;margin: 0;
 .navbar .navbar-collapse {text-align:center;}
 .nav-active{background-color:#4f4f4f;}
 @media (min-width: 1000px) {
-    .container-fluid{max-width: 970px;}
+    /*.container-fluid{max-width: 970px;}*/
     .container{max-width: 970px;margin:auto;}
     .navbar-nav{margin:auto;}
 }
