--- a/css/global.css
+++ b/css/global.css
@@ -72,7 +72,7 @@ body {width: 100%;height: 100%;padding: 50px 0 0 0;margin: 0;
 }
 .footer-lists li a{
 	text-decoration: none;
-	color: #848484;
+    color: rgba(255, 255, 255, 0.8);
     -webkit-transition: 0.15s;
        -moz-transition: 0.15s;
         -ms-transition: 0.15s;
