new contact background. updated contact css

--- a/css/contact.css
+++ b/css/contact.css
@@ -49,7 +49,7 @@ button:focus {
 /** PRIMARY CONTACT FORM **/
 
 .contact-background {
-    background-image: url("../img/backgrounds/wristbands.jpg");
+    background-image: url("../img/backgrounds/work.jpeg");
     background-repeat: no-repeat;
     background-size: cover;
     padding-top: 30px;
@@ -59,10 +59,19 @@ button:focus {
 .contact-body h1 {
     text-align: center;
     color: #FFFFFF;
+    text-shadow: 2px 2px 4px #000;
 }
+
+@media (min-width: 768px) {
+    .contact-form-group {
+        margin-left: 25%;
+    }
+}
+
 
 .contact-label {
     color: #FFFFFF;
+    text-shadow: 1px 1px 2px #000000;
 }
 
 .form-row {
@@ -74,7 +83,7 @@ button:focus {
 }
 
 .contact-input {
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.8);
 }
 
 .form-control:focus {
@@ -86,6 +95,8 @@ button:focus {
     background-color: #1AC6E2;
     color: #FFFFFF;
     border: none;
+    padding: 10px;
+    width: 100px;
 }
 
 .form-btn:hover,
@@ -95,7 +106,7 @@ button:focus {
 }
 
 .contact-paragraph {
-    color: #FFFFFF;
+    color: #000000;
 }
 
 /** GENERAL CONTACT FORM **/
