--- a/css/index.css
+++ b/css/index.css
@@ -126,8 +126,33 @@ fieldset[disabled] .btn-xl.active {
     background-image: none;
 }
 
+#home-carousel {
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.carousel-inner {
+    padding-top: 70px;
+    padding-bottom: 70px;
+}
+
+.carousel-img {
+    /*height: 175px;*/
+}
+
+@media (max-width: 767px) {
+    .carousel-img {
+        visibility: hidden;
+    }
+}
+
 .carousel-caption {
     text-shadow: none;
+    text-align: left;
+    /*margin-left: 300px;*/
+    bottom: -50px;
+    overflow-y: visible;
+    max-width: 400px;
 }
 
 .carousel-caption h3 {
@@ -136,4 +161,9 @@ fieldset[disabled] .btn-xl.active {
 
 .carousel-caption p {
     color: #28292E;
+}
+
+.carousel-caption a {
+    color: #2EC1DE;
+    text-decoration: none;
 }
