--- a/css/index.css
+++ b/css/index.css
@@ -182,5 +182,19 @@ fieldset[disabled] .btn-xl.active {
 }
 
 .d3-container h3 {
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
+
+/* Interest */
+
+.interest-container {
+    text-align: center;
+    padding: 50px 15px;
+}
+
+.interest-container h3 {
+    margin-bottom: 20px;
+}
+
+/* Home Footer */
+
