added home footer

--- a/css/contact.css
+++ b/css/contact.css
@@ -101,7 +101,7 @@ button:focus {
 
 .form-btn:hover,
 .form-btn:focus {
-    background-color: #2ab5d0;
+    background-color: #2AB5D0;
     color: #FFFFFF;
 }
 
