minor changes to education page. added designVids.html.

--- a/css/education.css
+++ b/css/education.css
@@ -1,3 +1,7 @@
+#box-wrap p {
+    margin: 40 40 40 40;
+}
+
 /**********************************************************
 NAVIGATION - VIDEO SUB-CATEGORIES
 ***********************************************************/
