added general contact page

--- a/css/contact.css
+++ b/css/contact.css
@@ -60,6 +60,7 @@ button:focus {
     text-align: center;
     color: #FFFFFF;
     text-shadow: 2px 2px 4px #000;
+    margin-top: 50px;
 }
 
 @media (min-width: 768px) {
@@ -97,6 +98,7 @@ button:focus {
     border: none;
     padding: 10px;
     width: 100px;
+    margin-bottom: 50px;
 }
 
 .form-btn:hover,
