--- a/css/global.css
+++ b/css/global.css
@@ -74,6 +74,12 @@ body {width: 100%;height: 100%;padding: 50px 0 0 0;margin: 0;
 	box-shadow: 0px 500px 0px 500px #28292E;
 	padding-top:10px;
 }
+
+.footer-container {
+    padding-left: 10%;
+    padding-right: 10%;
+}
+
 .footer-lists{
 	float: left;
 	width: 20%;
