--- a/css/education.css
+++ b/css/education.css
@@ -6,13 +6,13 @@
 NAVIGATION - VIDEO SUB-CATEGORIES
 ***********************************************************/
 
-.videoNav {
+.video-nav {
     list-style-type: none;
     float: left;
     margin: 0 0 0 -40px; /* weird margin, ask about better solution*/
 }
 
-.videoNav li {
+.video-nav li {
     border: none;
     background-color: transparent;
     display: inline-block;
