--- a/css/education.css
+++ b/css/education.css
@@ -18,41 +18,57 @@ NAVIGATION - VIDEO SUB-CATEGORIES
     display: inline-block;
     padding: 0 10px 0 10px;
     text-align: center;
-    font-size: 20px;
+    font-size: 16px;
 }
 
-#android:hover, #android:active {
-    background-color: #59d351;
-    -webkit-transition: .1s;
-    -moz-transition: .1s;
-    -ms-transition: .1s;
-    -o-transition: .1s;
-    transition: .1s;
+.education-btn {
+    color: #28292E;
 }
 
-#design:hover, #design:active {
-    background-color: #e59a13;
-    -webkit-transition: .1s;
-    -moz-transition: .1s;
-    -ms-transition: .1s;
-    -o-transition: .1s;
-    transition: .1s;
+.education-btn:hover,
+.education-btn:focus {
+    background-color: #1AC6E2;
+    color: #FFFFFF;
 }
 
-#ios:hover, #ios:active {
-    background-color: #1ac6e2;
-    -webkit-transition: .1s;
-    -moz-transition: .1s;
-    -ms-transition: .1s;
-    -o-transition: .1s;
-    transition: .1s;
+.active-btn {
+    background-color: #1AC6E2;
+    color: #FFFFFF;
 }
 
-#windows:hover, #windows:active {
-    background-color: #BA47A9;
-    -webkit-transition: .1s;
-    -moz-transition: .1s;
-    -ms-transition: .1s;
-    -o-transition: .1s;
-    transition: .1s;
-}
+
+/*#android:hover, #android:active {*/
+    /*background-color: #59d351;*/
+    /*-webkit-transition: .1s;*/
+    /*-moz-transition: .1s;*/
+    /*-ms-transition: .1s;*/
+    /*-o-transition: .1s;*/
+    /*transition: .1s;*/
+/*}*/
+
+/*#design:hover, #design:active {*/
+    /*background-color: #e59a13;*/
+    /*-webkit-transition: .1s;*/
+    /*-moz-transition: .1s;*/
+    /*-ms-transition: .1s;*/
+    /*-o-transition: .1s;*/
+    /*transition: .1s;*/
+/*}*/
+
+/*#ios:hover, #ios:active {*/
+    /*background-color: #1ac6e2;*/
+    /*-webkit-transition: .1s;*/
+    /*-moz-transition: .1s;*/
+    /*-ms-transition: .1s;*/
+    /*-o-transition: .1s;*/
+    /*transition: .1s;*/
+/*}*/
+
+/*#windows:hover, #windows:active {*/
+    /*background-color: #BA47A9;*/
+    /*-webkit-transition: .1s;*/
+    /*-moz-transition: .1s;*/
+    /*-ms-transition: .1s;*/
+    /*-o-transition: .1s;*/
+    /*transition: .1s;*/
+/*}*/
