--- a/css/index.css
+++ b/css/index.css
@@ -68,8 +68,7 @@ header .intro-text .intro-heading {
 /* Good looking button */
 .btn-xl {
     padding: 10px 40px;
-    border-color: #2EC1DE;
-    border-radius: 3px;
+    border: none;
     /* text-transform: uppercase; */
     font-family: "Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 14px;
@@ -83,7 +82,6 @@ header .intro-text .intro-heading {
 .btn-xl:active,
 .btn-xl.active,
 .open .dropdown-toggle.btn-xl {
-    border-color: #2AB5D0;
     color: #fff;
     background-color: #2AB5D0;
 }
@@ -264,6 +262,14 @@ fieldset[disabled] .btn-xl.active {
     color: #FFFFFF;
 }
 
-@media (max-width: 767px) {
+@media (max-width: 1247px) {
+    #subscribe-input {
+        width: 125px;
+    }
+}
 
+@media (max-width: 967px) and (min-width: 767px) {
+    #subscribe-input {
+        width: 68px;
+    }
 }
