--- a/css/global.css
+++ b/css/global.css
@@ -43,6 +43,7 @@ body {width: 100%;height: 100%;padding: 50px 0 0 0;margin: 0;
          -o-transition: 0.15s;
             transition: 0.15s;
 }
+
 .navbar .navbar-nav li a:link{color:#FFFFFF;}
 .navbar .navbar-nav li a:visited{color:#FFFFFF;}
 .navbar .navbar-nav li a:hover{
@@ -65,6 +66,11 @@ body {width: 100%;height: 100%;padding: 50px 0 0 0;margin: 0;
 .linky:hover{text-decoration:none;color: #3fe5ff;}
 .linky:link{text-decoration:none;color:#2EC1DE;}
 .linky:active{text-decoration:none;color:#13afc6;}
+
+.navbar .navbar-nav li .active-page {
+    color: #2EC1DE !important;
+}
+
 
 /*** FOOTER ***/
 
@@ -127,6 +133,11 @@ body {width: 100%;height: 100%;padding: 50px 0 0 0;margin: 0;
 	text-decoration: none;
 	color:#FFFFFF;
 }
+
+.footer-hr {
+    opacity: 0.3;
+}
+
 .presub{
 	background-color:#C1C1C1;
 	width:100%;
